--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/kit": "^2.17.3",
 		"@typescript-eslint/eslint-plugin": "^8.19.0",
 		"@typescript-eslint/parser": "^8.19.0",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.49",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.2",
 		"prettier-plugin-svelte": "^3.3.2",
-		"svelte": "^5.16.0",
-		"svelte-check": "^4.1.1",
+		"svelte": "^5.20.5",
+		"svelte-check": "^4.1.4",
 		"tailwindcss": "^3.4.17",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.2",
-		"vite": "^6.0.6",
-		"vitest": "^3.0.5"
+		"typescript": "5.8.2",
+		"vite": "^6.2.0",
+		"vitest": "^3.0.7"
 	},
 	"type": "module"
 }
